--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,5 @@ app.admin.default.password=${ADMIN_DEFAULT_PASSWORD}
 app.admin.default.enabled=${ADMIN_DEFAULT_ENABLED}
 
 # Keep-Alive Configuration (for Render free plan)
-app.url=${APP_URL:http://localhost:8080}
+app.url=${APP_URL:https://cafebrew-d6cp.onrender.com}
 app.health-check.endpoint=/api/health
