--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ app.admin.default.enabled=${ADMIN_DEFAULT_ENABLED}
 # Keep-Alive Configuration (for Render free plan)
 app.url=${APP_URL:https://cafebrew-d6cp.onrender.com}
 app.health-check.endpoint=/api/health
+
+
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:}
