--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ JWT_EXPIRATION=86400000
 ADMIN_DEFAULT_USERNAME=admin
 ADMIN_DEFAULT_PASSWORD=your_admin_password
 ADMIN_DEFAULT_ENABLED=true
+
+# Razorpay Configuration
+RAZORPAY_KEY_ID=your_razorpay_key_id
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret
