--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,9 +25,11 @@ jwt.secret=${JWT_SECRET}
 jwt.expiration=${JWT_EXPIRATION}
 
 # Default Admin User Configuration (using environment variables)
-app.admin.default.username=${ADMIN_DEFAULT_USERNAME}
-app.admin.default.password=${ADMIN_DEFAULT_PASSWORD}
-app.admin.default.enabled=${ADMIN_DEFAULT_ENABLED}
+app.admin.default.enabled=${ADMIN_DEFAULT_ENABLED:true}
+app.admin.owner.username=${ADMIN_OWNER_USERNAME:owner}
+app.admin.owner.password=${ADMIN_OWNER_PASSWORD:owner123}
+app.admin.staff.username=${ADMIN_STAFF_USERNAME:staff}
+app.admin.staff.password=${ADMIN_STAFF_PASSWORD:staff123}
 
 # Keep-Alive Configuration (for Render free plan)
 app.url=${APP_URL:https://cafebrew-d6cp.onrender.com}
