--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,7 @@ app.health-check.endpoint=/api/health
 
 
 cors.allowed-origins=${CORS_ALLOWED_ORIGINS:}
+
+# Razorpay Configuration
+razorpay.key.id=${RAZORPAY_KEY_ID}
+razorpay.key.secret=${RAZORPAY_KEY_SECRET}
