--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,15 @@ cors.allowed-origins=${CORS_ALLOWED_ORIGINS:}
 # Razorpay Configuration
 razorpay.key.id=${RAZORPAY_KEY_ID}
 razorpay.key.secret=${RAZORPAY_KEY_SECRET}
+
+# --- Logging (delegate to Log4j2) ---
+logging.config=classpath:log4j2.xml
+
+# Keep Spring logs sane
+logging.level.root=INFO
+logging.level.org.springframework=INFO
+logging.level.org.hibernate=WARN
+
+# Disable file-based logging assumptions
+logging.file.name=
+logging.file.path=
