--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
 		</dependency>
+		<!-- AWS SDK for Cloudflare R2 Storage -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.25.60</version>
+		</dependency>
 	</dependencies>
 
 	<build>
