--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,6 +45,18 @@ cors.allowed-origins=${CORS_ALLOWED_ORIGINS:}
 razorpay.key.id=${RAZORPAY_KEY_ID}
 razorpay.key.secret=${RAZORPAY_KEY_SECRET}
 
+# Cloudflare R2 Storage Configuration
+r2.account.id=${R2_ACCOUNT_ID}
+r2.access.key=${R2_ACCESS_KEY}
+r2.secret.key=${R2_SECRET_KEY}
+r2.bucket.name=${R2_BUCKET_NAME}
+r2.public.url=${R2_PUBLIC_URL}
+
+# File Upload Configuration
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 # Enable response compression
 server.compression.enabled=true
 
