--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,8 +47,8 @@ razorpay.key.secret=${RAZORPAY_KEY_SECRET}
 
 # Cloudflare R2 Storage Configuration
 r2.account.id=${R2_ACCOUNT_ID}
-r2.access.key=${R2_ACCESS_KEY}
-r2.secret.key=${R2_SECRET_KEY}
+r2.access.key=${R2_ACCESS_KEY_ID}
+r2.secret.key=${R2_SECRET_ACCESS_KEY}
 r2.bucket.name=${R2_BUCKET_NAME}
 r2.public.url=${R2_PUBLIC_URL}
 
